# openGL-template

./: CMakeLists.txt  README.md
shaders/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp  shader.h
